# GOOFishClaw-MCP--MCP-

./: README.md
GooFish-MCP-Tool-CN/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  server.py
GooFish-MCP-Tool-CN/tools/: generate_image_tools.py  prompt_tools.py  xconfig.py  xianyu_tools.py
